enterprise/operator/pkg/lb/testdata/lbservice_translation/31-hostname-based-backend-specification/input-config.yaml
ServerName: "ilb"
AccessLog:
  EnableStdOut: true
Metrics:
  ClusterAdditionalRequestResponse: true
  ClusterTimeoutBudget: true
  ClusterPerEndpoint: true
T1T2HealthCheck:
  T1ProbeTimeoutSeconds: 5
  T1ProbeHTTPPath: /health
  T1ProbeHTTPMethod: GET
  T1ProbeHTTPUserAgentPrefix: cilium-probe/
  T2ProbeMinHealthyBackendPercentage: 20
Policy:
  EnableCiliumPolicyFilters: true
IPFamilies:
  EnableIPv4: true
  EnableIPv6: true
