enterprise/operator/pkg/lb/testdata/lbservice_translation/31-hostname-based-backend-specification/input-lbbackend-1.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBBackendPool
metadata:
  namespace: default
  name: lb-1
spec:
  backendType: Hostname
  backends:
    - host: foo.example.com
      port: 8080
    - host: bar.example.com.
      port: 8080
  healthCheck:
    intervalSeconds: 30
    timeoutSeconds: 5
    healthyThreshold: 1
    unhealthyThreshold: 1
    http:
      host: lb
      path: /healthz
