enterprise/operator/pkg/lb/testdata/lbservice_translation/31-hostname-based-backend-specification/input-lbservice.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBService
metadata:
  namespace: default
  name: lb-1
spec:
  vipRef:
    name: lb-1
  port: 80
  applications:
    httpProxy:
      routes:
        - backendRef:
            name: lb-1
